Added buy product functionality; Edited fields on Facturas to allow null fields to align correctly with the business logic; Minor swagger cleanup.
